--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,94 @@
 }
 
 body {
-  background: rgb(226, 245, 226);
+  background: linear-gradient(rgb(248, 249, 248), rgb(160, 219, 160));
+  width: 70vw;
+  margin: 5% 15%;
 }
 
-.intro,
+h1,
+h2 {
+  font-family: Georgia, "Times New Roman", Times, serif;
+  color: rgb(65, 119, 65);
+  text-transform: uppercase;
+}
+
+.intro {
+  text-align: center;
+}
+
+.intro h1 {
+  padding: 2% 5%;
+  color: rgb(65, 119, 65);
+}
+
+.intro img {
+  border: 0.1em solid rgb(65, 119, 65);
+}
+
+.contacts {
+  padding: 2% 12%;
+}
+
+.contacts p {
+  padding: 1% 0;
+}
+
+.intro strong {
+  text-transform: uppercase;
+}
+
 .summary,
-.work,
 .education,
+.work,
 .skills {
-  width: 70vw;
+  margin: 2% 10%;
+}
+
+.summary h2,
+.work h2 {
+  padding: 1% 5%;
+}
+
+.summary p {
+  padding: 1% 10%;
+}
+
+.summary h2,
+.work h2,
+.skills h2,
+.more-info {
+  text-align: center;
+}
+
+.education table {
+  margin: 0 20%;
+  width: 60%;
+}
+.education caption {
+  font-family: Georgia, "Times New Roman", Times, serif;
+  color: rgb(65, 119, 65);
+  text-transform: uppercase;
+  font-size: 1.5em;
+  padding: 1% 5%;
+}
+
+.education th,
+td {
+  padding: 0.5% 2%;
+  border: 0.1em solid rgb(65, 119, 65);
+}
+
+.work ul {
+  margin: 1% 10%;
+  padding: 0 20%;
+}
+
+.skills ul {
+  margin: 1% 10%;
+  padding: 0 20%;
+}
+
+.more-info {
+  margin-top: 5%;
 }
