pridanie komentov a main, zmena div na section

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+/*..........BASICS..........*/
+
 * {
   margin: 0;
   padding: 0;
@@ -10,35 +12,12 @@ body {
   margin: 5% 15%;
 }
 
+/*..........SHARED..........*/
+
 h1,
 h2 {
   font-family: Georgia, "Times New Roman", Times, serif;
   color: rgb(65, 119, 65);
-  text-transform: uppercase;
-}
-
-.intro {
-  text-align: center;
-}
-
-.intro h1 {
-  padding: 2% 5%;
-  color: rgb(65, 119, 65);
-}
-
-.intro img {
-  border: 0.1em solid rgb(65, 119, 65);
-}
-
-.contacts {
-  padding: 2% 12%;
-}
-
-.contacts p {
-  padding: 1% 0;
-}
-
-.intro strong {
   text-transform: uppercase;
 }
 
@@ -54,16 +33,48 @@ h2 {
   padding: 1% 5%;
 }
 
-.summary p {
-  padding: 1% 10%;
-}
-
 .summary h2,
 .work h2,
 .skills h2,
 .more-info {
   text-align: center;
 }
+
+/*..........INTRO..........*/
+
+.intro {
+  text-align: center;
+}
+
+.intro h1 {
+  padding: 2% 5%;
+  color: rgb(65, 119, 65);
+}
+
+.intro img {
+  border: 0.1em solid rgb(65, 119, 65);
+}
+
+.intro strong {
+  text-transform: uppercase;
+}
+
+.contacts {
+  padding: 2% 12%;
+}
+
+.contacts p {
+  padding: 1% 0;
+  text-align: center;
+}
+
+/*..........SUMMARY..........*/
+
+.summary p {
+  padding: 1% 10%;
+}
+
+/*..........EDUCATION..........*/
 
 .education table {
   margin: 0 20%;
@@ -83,6 +94,8 @@ td {
   border: 0.1em solid rgb(65, 119, 65);
 }
 
+/*..........WORK..........*/
+
 .work ul {
   margin: 1% 10%;
   padding: 0 20%;
@@ -92,6 +105,8 @@ td {
   margin: 1% 10%;
   padding: 0 20%;
 }
+
+/*..........MORE-INFO..........*/
 
 .more-info {
   margin-top: 5%;
